--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,15 @@
 # Site settings
-title: *folio
-email: you@example.com
+title: Haryo Sukmawanto
+email: Haryo@Sukmawanto.com
 description: > # this means to ignore newlines until "baseurl:"
   A simple, whitespace, helvetica based portfolio theme.
 baseurl:  # the subpath of your site, e.g. /blog/
 url:  # the base hostname & protocol for your site
-twitter_username: twitter_username
-github_username:  github_username
+twitter_username: Fragrag
+github_username:  Fragrag
+
+# Plugins
+plugins: [jekyll-paginate]
 
 # Build settings
 markdown: kramdown
@@ -17,13 +20,12 @@ highlighter: rouge
 paginate: 15
 paginate_path: "/blog/page:num/"
 
-
 collections:
-  portfolio:
+  projects:
     output: true
-    permalink: /portfolio/:path/
-  poetry:
+    permalink: /projects/:path/
+  articles:
     output: true
-    permalink: /poetry/:path/
+    permalink: /articles/:path/
 
 
