Work on project layout adding project content

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ plugins: [jekyll-paginate]
 # Build settings
 markdown: kramdown
 
-highlighter: rouge
+highlighter: none
 
 # Pagination
 paginate: 15
