Refactored site structure to use 'collaboration' term instead of 'commercial'

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl:  # the subpath of your site, e.g. /blog/
 url:  # the base hostname & protocol for your site
 twitter_username: Fragrag
-github_username:  Fragrag
+github_username:  haryo-s
 
 # Plugins
 plugins: [jekyll-paginate]
@@ -26,8 +26,8 @@ collections:
   articles:
     output: true
     permalink: /articles/:path/
-  commercial:
+  collaborations:
     output: true
-    permalink: /commercial/:path/
+    permalink: /collaborations/:path/
 
 
